Auctoritas downgraded to Java 13